--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tiptap/react": "^2.23.0",
     "@tiptap/starter-kit": "^2.23.0",
     "bcryptjs": "^3.0.2",
+    "mongoose": "^8.16.1",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
